# Ragi_RQ-based-RAG-pipeline

./: README.md  docker-compose.yaml  main.py  pyproject.toml  server.py
components/: index.py  redis_client.py  worker.py
