[project]
name = "rag-queue-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.2",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.9.0",
    "pypdf>=6.6.0",
    "rq>=2.6.1",
    "uvicorn>=0.38.0",
]
